--- a/site/static/css/people.css
+++ b/site/static/css/people.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .image-container {
@@ -16,7 +16,7 @@ body {
 }
 
 .person-link {
-  margin-left: .5em;
+  margin-left: 0.5em;
   white-space: nowrap;
   font-size: 100%;
   text-rendering: auto; /* chrome compliance for small-caps font */
@@ -24,44 +24,43 @@ body {
 }
 
 .card-text {
-  margin-bottom: .5rem !important;
+  margin-bottom: 0.5rem !important;
 }
 
-@media (max-width:576px) {
+@media (max-width: 576px) {
   .card-columns {
-      column-count: 1;
+    column-count: 1;
   }
 }
 
-@media (min-width:576px) and (max-width:768px) {
-    .card-columns {
-      column-count: 2;
-    }
+@media (min-width: 576px) and (max-width: 768px) {
+  .card-columns {
+    column-count: 2;
+  }
 }
-@media (min-width:768px) and (max-width:992px) {
-    .card-columns {
-      column-count: 3;
-    }
+@media (min-width: 768px) and (max-width: 992px) {
+  .card-columns {
+    column-count: 3;
+  }
 }
-@media (min-width:992px) and (max-width:1200px) {
-    .card-columns {
-      column-count: 4;
-    }
+@media (min-width: 992px) and (max-width: 1200px) {
+  .card-columns {
+    column-count: 4;
+  }
 }
-@media (min-width:1200px) {
-    .card-columns {
-      column-count: 5;
-    }
+@media (min-width: 1200px) {
+  .card-columns {
+    column-count: 5;
+  }
 }
 
 #note {
-    background-color: lightgrey;
+  background-color: lightgrey;
 }
 
 .moveup {
-    position: relative;
-    top: -0.1rem;
-
+  position: relative;
+  top: -0.1rem;
 }
 
 .footer {
@@ -73,9 +72,15 @@ body {
 
 footer:hover {
   cursor: pointer;
-  background-color: #1f2225!important;
+  background-color: #1f2225 !important;
 }
 
 main.container {
   padding-bottom: 4rem;
+}
+
+.navbar-nav .nav-item {
+  text-align: center;
+  padding-left: auto;
+  padding-right: auto;
 }
